<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/tutorial"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/tutorial" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_app" />
        <item
            android:id="@+id/policy"
            android:icon="@drawable/ic_baseline_policy_24"
            android:title="@string/privacy_policy" />
       <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share_app" />
    </group>
</menu>