<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp">


        <TextView
            android:layout_below="@+id/mySwitch"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="📢Sound Booster📱"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#B0000000"
            android:layout_centerHorizontal="true"/>
        </androidx.cardview.widget.CardView>

        <Switch
            android:layout_marginTop="15dp"
            android:id="@+id/notification_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOn="@string/on"
            android:thumb="@drawable/customswitchselecter"
            android:track="@drawable/customtrack"
            android:textOff="@string/off" />
        <TextView
        android:id="@+id/activate_state"
        android:layout_below="@+id/mySwitch"
        android:layout_width="wrap_content"
            android:layout_gravity="center"
        android:layout_height="wrap_content"
            android:text="Boost is Activated"
            android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DF706B6B"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">
        <include
            android:id="@+id/new_profile"
            layout="@layout/circle_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_profile_add"
            />
        </androidx.cardview.widget.CardView>

        <include
            layout="@layout/nativeads"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="🙏Apology! Ads encourage us to maintain application"/>

        <TextView
           android:id="@+id/audio_types_holder_title"
            style="@style/ScreenHeader"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="#FFFF"
            android:textSize="20sp"
            android:background="@drawable/titletext"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="Other Volume Settings" />






        <LinearLayout
            android:id="@+id/profile_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical" />

        <Button
            android:id="@+id/rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Rate Us"
            android:layout_below="@+id/booster_settings"
            android:textColor="#FFFF"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/btntutoral"/>

    </LinearLayout>
</ScrollView>
